[gd_scene load_steps=32 format=2]

[ext_resource path="res://boss.gd" type="Script" id=1]
[ext_resource path="res://scenes/enemies/introscorpion/Flippables.gd" type="Script" id=2]
[ext_resource path="res://raw_sprites/snek.png" type="Texture" id=3]
[ext_resource path="res://scenes/enemies/introscorpion/idunno.gd" type="Script" id=4]
[ext_resource path="res://scenes/enemies/boss1/RandomAttacks.gd" type="Script" id=5]
[ext_resource path="res://n_plr_detector.gd" type="Script" id=6]
[ext_resource path="res://scripts/JumpController.gd" type="Script" id=7]
[ext_resource path="res://player/player_states/player_air.gd" type="Script" id=8]
[ext_resource path="res://player/player_states/player_floor.gd" type="Script" id=9]
[ext_resource path="res://scenes/enemies/boss5/JumpToFarthestBorderl.gd" type="Script" id=10]
[ext_resource path="res://scenes/enemies/boss5/snekanims.gd" type="Script" id=11]
[ext_resource path="res://wpnsys/hurt_stuff/statusThing.gd" type="Script" id=16]
[ext_resource path="res://wpnsys/hurt_stuff/hurt_component.gd" type="Script" id=18]
[ext_resource path="res://scripts/physicsthings.gd" type="Script" id=23]
[ext_resource path="res://state_machine/state_machine.gd" type="Script" id=24]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 22.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.5, 15.5 )

[sub_resource type="CircleShape2D" id=24]
radius = 500.0

[sub_resource type="Animation" id=17]
length = 0.032

[sub_resource type="Animation" id=52]
resource_name = "backdash"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=50]
resource_name = "fall"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=53]
resource_name = "hurtair"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=54]
resource_name = "hurtfloor"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=51]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=15]
resource_name = "jump"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}

[sub_resource type="Animation" id=87]
resource_name = "pickupbomb"
length = 0.21
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=56]
resource_name = "pickupgun"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=57]
resource_name = "pickuprifle"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=58]
resource_name = "pickupswd"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=59]
resource_name = "run"
length = 0.181
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="Animation" id=55]
resource_name = "tired"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[node name="Entity" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 40
script = ExtResource( 1 )

[node name="PhysicsStuff" type="Node" parent="."]
script = ExtResource( 23 )

[node name="Flippables" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Flippables"]
visible = false
margin_left = -18.0
margin_top = -11.0
margin_right = 18.0
margin_bottom = 32.0

[node name="Sprite" type="Sprite" parent="Flippables"]
unique_name_in_owner = true
position = Vector2( 0, 12 )
texture = ExtResource( 3 )
flip_h = true
hframes = 15
frame = 9

[node name="HurtComponent" type="Area2D" parent="."]
visible = false
script = ExtResource( 18 )
is_enemy = true
path_entitystatus = NodePath("../StatusThing")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2( 1, 9.5 )
shape = SubResource( 1 )

[node name="StatusThing" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 16 )
MAX_HP = 150
MAX_STAMINA = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 2.5, 16.5 )
shape = SubResource( 2 )

[node name="StateMachine" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 24 )
initial_state = NodePath("Intro")
print_state = true

[node name="Intro" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
can_go_to_hurtstate = false
idle_state_path = NodePath(".")
attack_state_path = NodePath("../JumpToFarthestBorderl")

[node name="JumpToFarthestBorderl" type="Node" parent="StateMachine"]
script = ExtResource( 10 )
statr = NodePath("../RandAttacks")

[node name="RandAttacks" type="Node" parent="StateMachine"]
script = ExtResource( 5 )
attacks = [ NodePath("../JumpToFarthestBorderl") ]

[node name="NewPlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource( 6 )
cantaimY = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="NewPlayerDetector"]
shape = SubResource( 24 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
anims/RESET = SubResource( 17 )
anims/backdash = SubResource( 52 )
anims/fall = SubResource( 50 )
anims/hurtair = SubResource( 53 )
anims/hurtfloor = SubResource( 54 )
anims/idle = SubResource( 51 )
anims/jump = SubResource( 15 )
anims/pickupbomb = SubResource( 87 )
anims/pickupgun = SubResource( 56 )
anims/pickuprifle = SubResource( 57 )
anims/pickupswd = SubResource( 58 )
anims/run = SubResource( 59 )
anims/tired = SubResource( 55 )
script = ExtResource( 11 )

[node name="Jumper" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource( 7 )
max_jumps = 1
jump_force = -100

[node name="ActionStateMachine" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 24 )
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="ActionStateMachine"]
unique_name_in_owner = true
script = ExtResource( 9 )
path_fallstate = NodePath("../fall")
path_floorstate = NodePath("../walk")
path_jumpstate = NodePath("../jump")

[node name="walk" type="Node" parent="ActionStateMachine"]
script = ExtResource( 9 )
path_fallstate = NodePath("../fall")
path_floorstate = NodePath("../idle")
path_jumpstate = NodePath("../jump")
is_walk_state = true

[node name="jump" type="Node" parent="ActionStateMachine"]
unique_name_in_owner = true
script = ExtResource( 8 )
path_idlestate = NodePath("../idle")
path_walk_state = NodePath("../walk")
path_air_state = NodePath("../fall")

[node name="fall" type="Node" parent="ActionStateMachine"]
script = ExtResource( 8 )
path_idlestate = NodePath("../idle")
path_walk_state = NodePath("../walk")
path_air_state = NodePath("../jump")
is_fall_state = true

[connection signal="died" from="HurtComponent" to="." method="_on_HurtComponent_died"]
[connection signal="hurted" from="HurtComponent" to="." method="_on_HurtComponent_hurted"]
[connection signal="target_detected" from="NewPlayerDetector" to="StatusThing" method="_on_NewPlayerDetector_target_detected"]
[connection signal="entered" from="ActionStateMachine/idle" to="AnimationPlayer" method="_on_idle_entered"]
[connection signal="entered" from="ActionStateMachine/jump" to="AnimationPlayer" method="_on_jump_entered"]
